# typer-greet

./: README.md  pyproject.toml
src/typ/: main.py
src/typ.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/typ/commands/: greeting.py
